test/e2e/fixtures/tcpmapping-tls-origination-context-cross-namespace/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tcpmapping-tls-origination-context-cross-namespace-other
